# pear

./: .gitignore  ChangeLog.md  README.md  package.yaml  typing-haskell.cabal
src/Language/: Desugarer.hs  Entailment.hs  Expr.hs  Lexer.hs  Names.hs  Parser.hs  TypeInference.hs  Typechecker.hs  Types.hs  Utils.hs
src/Pear/Language/: .#TypeChecker.hs  AST.hs  CoreFn.hs  Declaration.hs  Expr.hs  Lexer.hs  Names.hs  TypeChecker.hs  Types.hs  Utils.hs
src/Pear/Language/Lexer/: Lexer.hs  Token.hs
test/Pear/Language/Spec/: LexerSpec.hs
test/Spec/: ParserSpec.hs
